<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditProfile">

    <EditText
        android:id="@+id/edtTextEditProfileCurrentPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/current_password"
        android:inputType="textNoSuggestions|textEmailAddress"
        android:password="true"
        app:layout_constraintEnd_toEndOf="@+id/edtTextEditProfileName"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/edtTextEditProfileName"
        app:layout_constraintTop_toBottomOf="@+id/edtTextEditProfileEmail" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/imgViewEditProfileImage"
        android:layout_width="96dp"
        android:layout_height="96dp"
        android:layout_marginTop="32dp"
        android:src="@drawable/profile_96"
        app:civ_border_color="@color/white"
        app:civ_border_width="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edtTextEditProfileName"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:hint="@string/name_hint"
        android:inputType="textNoSuggestions|textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgViewEditProfileImage" />

    <Button
        android:id="@+id/btnSaveEditProfile"
        android:layout_width="0dp"
        android:layout_height="35dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/rounded_corner"
        android:text="@string/save"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="@+id/edtTextEditProfileConfirmPassword"
        app:layout_constraintStart_toStartOf="@+id/edtTextEditProfileConfirmPassword"
        app:layout_constraintTop_toBottomOf="@+id/edtTextEditProfileConfirmPassword" />

    <EditText
        android:id="@+id/edtTextEditProfileEmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/email_hint"
        android:inputType="textNoSuggestions|textEmailAddress"
        app:layout_constraintEnd_toEndOf="@+id/edtTextEditProfileName"
        app:layout_constraintStart_toStartOf="@+id/edtTextEditProfileName"
        app:layout_constraintTop_toBottomOf="@+id/edtTextEditProfileName" />

    <EditText
        android:id="@+id/edtTextEditProfilePassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/password_hint"
        android:inputType="textNoSuggestions|textPassword"
        android:password="true"
        app:layout_constraintEnd_toEndOf="@+id/edtTextEditProfileCurrentPassword"
        app:layout_constraintStart_toStartOf="@+id/edtTextEditProfileCurrentPassword"
        app:layout_constraintTop_toBottomOf="@+id/edtTextEditProfileCurrentPassword" />

    <EditText
        android:id="@+id/edtTextEditProfileConfirmPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/confirm_password_hint"
        android:inputType="textNoSuggestions|textPassword"
        android:password="true"
        app:layout_constraintEnd_toEndOf="@+id/edtTextEditProfilePassword"
        app:layout_constraintStart_toStartOf="@+id/edtTextEditProfilePassword"
        app:layout_constraintTop_toBottomOf="@+id/edtTextEditProfilePassword" />

    <ProgressBar
        android:id="@+id/progressBar2"
        style="@android:style/Widget.DeviceDefault.Light.ProgressBar.Large"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>