<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".SignUp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/edtTextSignupName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="32dp"
            android:ems="10"
            android:hint="@string/name_hint"
            android:inputType="textNoSuggestions"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/logo" />

        <ImageView
            android:id="@+id/logo"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_marginTop="24dp"
            android:contentDescription="@string/logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/triponeer" />

        <EditText
            android:id="@+id/edtTextSignupEmail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textNoSuggestions|textEmailAddress"
            app:layout_constraintEnd_toEndOf="@+id/edtTextSignupName"
            app:layout_constraintStart_toStartOf="@+id/edtTextSignupName"
            app:layout_constraintTop_toBottomOf="@+id/edtTextSignupName" />

        <EditText
            android:id="@+id/edtTextSignupPassword"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:hint="@string/pass"
            android:inputType="textNoSuggestions|textPassword"
            app:layout_constraintEnd_toEndOf="@+id/edtTextSignupEmail"
            app:layout_constraintStart_toStartOf="@+id/edtTextSignupEmail"
            app:layout_constraintTop_toBottomOf="@+id/edtTextSignupEmail" />

        <EditText
            android:id="@+id/edtTextSignupConfirmPassword"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:hint="@string/confirm_pass"
            android:inputType="textNoSuggestions|textPassword"
            app:layout_constraintEnd_toEndOf="@+id/edtTextSignupPassword"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/edtTextSignupPassword"
            app:layout_constraintTop_toBottomOf="@+id/edtTextSignupPassword" />

        <Button
            android:id="@+id/btnSignup"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="24dp"
            android:background="@drawable/rounded_corner"
            android:fontFamily="sans-serif-medium"
            android:text="@string/signup"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/edtTextSignupConfirmPassword"
            app:layout_constraintStart_toStartOf="@+id/edtTextSignupConfirmPassword"
            app:layout_constraintTop_toBottomOf="@+id/edtTextSignupConfirmPassword" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/red_700"
            app:layout_constraintStart_toStartOf="@+id/edtTextSignupConfirmPassword"
            app:layout_constraintTop_toBottomOf="@+id/edtTextSignupConfirmPassword" />

        <ProgressBar
            android:id="@+id/progressBar"
            style="@android:style/Widget.DeviceDefault.Light.ProgressBar.Large"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>