<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".AddTrip">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white">

        <ProgressBar
            android:id="@+id/progressBarAddTrip"
            style="@android:style/Widget.DeviceDefault.Light.ProgressBar.Large"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Spinner
            android:id="@+id/spinnerType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:entries="@array/type"
            android:spinnerMode="dialog"
            app:layout_constraintStart_toStartOf="@+id/textView17"
            app:layout_constraintTop_toBottomOf="@+id/textView17" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="?android:attr/listDivider"
            app:layout_constraintBottom_toTopOf="@+id/textView5"
            app:layout_constraintTop_toBottomOf="@+id/spinnerType"
            tools:layout_editor_absoluteX="0dp" />

        <ImageView
            android:id="@+id/imgViewDate2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@+id/spinnerType"
            app:layout_constraintStart_toStartOf="@+id/imgViewTime"
            app:layout_constraintTop_toTopOf="@+id/textView17"
            app:srcCompat="@drawable/type" />

        <TextView
            android:id="@+id/textView17"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:fontFamily="sans-serif-medium"
            android:text="@string/type_"
            app:layout_constraintStart_toStartOf="@+id/txtViewTime"
            app:layout_constraintTop_toBottomOf="@+id/txtViewTime" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:text="@string/certain_days"
            app:layout_constraintStart_toStartOf="@+id/textView6"
            app:layout_constraintTop_toTopOf="@+id/textView4" />

        <ImageView
            android:id="@+id/imgViewName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            app:layout_constraintBottom_toBottomOf="@+id/edtTextTripName"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/txtViewTripName"
            app:srcCompat="@drawable/label" />

        <TextView
            android:id="@+id/txtViewTripName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:fontFamily="sans-serif-medium"
            android:text="@string/trip_name"
            app:layout_constraintStart_toEndOf="@+id/imgViewName"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/edtTextTripName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/trip_name_hint"
            android:inputType="textNoSuggestions|textPersonName"
            app:layout_constraintStart_toStartOf="@+id/txtViewTripName"
            app:layout_constraintTop_toBottomOf="@+id/txtViewTripName" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@+id/edtTextTripDescription"
            app:layout_constraintStart_toStartOf="@+id/imgViewName"
            app:layout_constraintTop_toBottomOf="@+id/edtTextTripName"
            app:srcCompat="@drawable/description" />

        <TextView
            android:id="@+id/txtViewTripDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="sans-serif-medium"
            android:text="@string/trip_description"
            app:layout_constraintStart_toStartOf="@+id/edtTextTripName"
            app:layout_constraintTop_toBottomOf="@+id/edtTextTripName" />

        <EditText
            android:id="@+id/edtTextTripDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/trip_description_hint"
            android:inputType="textNoSuggestions|textPersonName"
            app:layout_constraintStart_toStartOf="@+id/txtViewTripDescription"
            app:layout_constraintTop_toBottomOf="@+id/txtViewTripDescription" />

        <ImageView
            android:id="@+id/imgViewSource"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            app:layout_constraintBottom_toBottomOf="@+id/edtTextSource"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/txtViewSource"
            app:srcCompat="@drawable/source" />

        <TextView
            android:id="@+id/txtViewSource"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="32dp"
            android:fontFamily="sans-serif-medium"
            android:text="@string/source"
            app:layout_constraintStart_toEndOf="@+id/imgViewSource"
            app:layout_constraintTop_toBottomOf="@+id/edtTextTripDescription" />

        <ImageView
            android:id="@+id/imgViewDestination"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@+id/edtTextDestination"
            app:layout_constraintStart_toStartOf="@+id/imgViewSource"
            app:layout_constraintTop_toTopOf="@+id/txtViewDestination"
            app:srcCompat="@drawable/destination" />

        <EditText
            android:id="@+id/edtTextSource"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/source_hint"
            android:inputType="textPersonName"
            app:layout_constraintStart_toStartOf="@+id/txtViewSource"
            app:layout_constraintTop_toBottomOf="@+id/txtViewSource" />

        <EditText
            android:id="@+id/edtTextDestination"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/destination_hint"
            android:inputType="textPersonName"
            app:layout_constraintStart_toStartOf="@+id/txtViewDestination"
            app:layout_constraintTop_toBottomOf="@+id/txtViewDestination" />

        <TextView
            android:id="@+id/txtViewDestination"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="sans-serif-medium"
            android:text="@string/destination"
            app:layout_constraintStart_toStartOf="@+id/edtTextSource"
            app:layout_constraintTop_toBottomOf="@+id/edtTextSource" />

        <TextView
            android:id="@+id/txtViewTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:clickable="true"
            android:focusable="auto"
            android:fontFamily="sans-serif"
            android:gravity="center_vertical"
            android:text="@string/time_default"
            android:textColor="@color/colorPrimary"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="@+id/textView4"
            app:layout_constraintTop_toBottomOf="@+id/textView4" />

        <TextView
            android:id="@+id/txtViewDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:clickable="true"
            android:focusable="auto"
            android:fontFamily="sans-serif"
            android:gravity="center_vertical"
            android:text="@string/date_default"
            android:textColor="@color/colorPrimary"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="@+id/textView3"
            app:layout_constraintTop_toBottomOf="@+id/textView3" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:fontFamily="sans-serif-medium"
            android:text="@string/date"
            app:layout_constraintStart_toStartOf="@+id/edtTextDestination"
            app:layout_constraintTop_toBottomOf="@+id/edtTextDestination" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="sans-serif-medium"
            android:text="@string/time"
            app:layout_constraintStart_toStartOf="@+id/txtViewDate"
            app:layout_constraintTop_toBottomOf="@+id/txtViewDate" />

        <ImageView
            android:id="@+id/imgViewDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@+id/txtViewDate"
            app:layout_constraintStart_toStartOf="@+id/imgViewDestination"
            app:layout_constraintTop_toTopOf="@+id/textView3"
            app:srcCompat="@drawable/date" />

        <ImageView
            android:id="@+id/imgViewTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@+id/txtViewTime"
            app:layout_constraintStart_toStartOf="@+id/imgViewDate"
            app:layout_constraintTop_toTopOf="@+id/textView4"
            app:srcCompat="@drawable/time" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="?android:attr/listDivider"
            app:layout_constraintBottom_toTopOf="@+id/textView3"
            app:layout_constraintTop_toBottomOf="@+id/edtTextDestination"
            tools:layout_editor_absoluteX="0dp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="?android:attr/listDivider"
            app:layout_constraintBottom_toTopOf="@+id/txtViewSource"
            app:layout_constraintTop_toBottomOf="@+id/edtTextTripDescription" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="?android:attr/listDivider"
            app:layout_constraintBottom_toTopOf="@+id/textView17"
            app:layout_constraintTop_toBottomOf="@+id/txtViewTime"
            tools:layout_editor_absoluteX="11dp" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/imageView5"
            app:layout_constraintTop_toBottomOf="@+id/textView5"
            tools:itemCount="3">

        </androidx.recyclerview.widget.RecyclerView>

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:text="@string/notes"
            app:layout_constraintBottom_toBottomOf="@+id/imageView5"
            app:layout_constraintStart_toStartOf="@+id/spinnerType"
            app:layout_constraintTop_toTopOf="@+id/imageView5" />

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:src="@drawable/note"
            app:layout_constraintStart_toStartOf="@+id/imgViewDate2"
            app:layout_constraintTop_toBottomOf="@+id/spinnerType" />

        <ImageButton
            android:id="@+id/btnAddNote"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginStart="8dp"
            android:backgroundTint="#00FFFFFF"
            android:src="@drawable/add"
            app:layout_constraintBottom_toBottomOf="@+id/textView5"
            app:layout_constraintStart_toEndOf="@+id/textView5"
            app:layout_constraintTop_toTopOf="@+id/textView5" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:text="@string/repeat"
            app:layout_constraintStart_toStartOf="@+id/spinnerRepeat"
            app:layout_constraintTop_toTopOf="@+id/textView3" />

        <Spinner
            android:id="@+id/spinnerRepeat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="32dp"
            android:entries="@array/repeat"
            android:spinnerMode="dialog"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView6" />

        <ImageButton
            android:id="@+id/btnRepeatDays"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#00FFFFFF"
            android:src="@drawable/days"
            app:layout_constraintEnd_toEndOf="@+id/textView7"
            app:layout_constraintStart_toStartOf="@+id/textView7"
            app:layout_constraintTop_toBottomOf="@+id/textView7" />

        <Button
            android:id="@+id/btnSaveAddTrip"
            android:layout_width="wrap_content"
            android:layout_height="45dp"
            android:layout_marginBottom="8dp"
            android:layout_weight="1"
            android:backgroundTint="@color/colorPrimary"
            android:text="@string/save"
            android:textAllCaps="false"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/txtViewError"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:textColor="@color/red_700"
            app:layout_constraintBottom_toTopOf="@+id/btnSaveAddTrip"
            app:layout_constraintEnd_toEndOf="@+id/btnSaveAddTrip"
            app:layout_constraintStart_toStartOf="@+id/btnSaveAddTrip"
            app:layout_constraintTop_toBottomOf="@+id/recyclerView" />

        <TextView
            android:id="@+id/txtViewNotesEmpty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/txtViewError"
            app:layout_constraintStart_toStartOf="@+id/textView5"
            app:layout_constraintTop_toBottomOf="@+id/textView5" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>